fix: no line breaks in footer buttons

--- a/packages/frontend/src/components/Dialog/styles.module.scss
+++ b/packages/frontend/src/components/Dialog/styles.module.scss
@@ -163,6 +163,7 @@ $paddingVertical: 20px;
 
 .footerActionButton {
   min-width: 100px;
+  white-space: nowrap;
   padding: 8px 12px !important;
   & + & {
     margin-left: 20px;
